add diff of my branch

--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
+* Diffrence from redguardtoo/emacs.d
+I don't what to use evil so I create a branch 'lyzh' without evil plugin enabled.
 * Before start
 Please read below checklist at least once:
 - I recommend Emacs *24.3.1* or *24.4*
